// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/forms/OrganizationForm renders team form correctly: Active 1`] = `
<input
  id="yes"
  name="active"
  type="radio"
  value=""
/>
`;

exports[`components/forms/OrganizationForm renders team form correctly: Not active 1`] = `
<input
  id="no"
  name="active"
  type="radio"
  value=""
/>
`;

exports[`components/forms/OrganizationForm renders team form correctly: Null Identifier 1`] = `null`;

exports[`components/forms/OrganizationForm renders team form correctly: Submit Button 1`] = `
<button
  aria-label="Save Team"
  class="btn btn-block btn btn-primary btn btn-secondary"
  id="team-form-submit-button"
  type="submit"
>
  Save Team
</button>
`;

exports[`components/forms/OrganizationForm renders team form correctly: Team name 1`] = `
<input
  class="form-control"
  data-testid="name"
  id="name"
  name="name"
  type="text"
  value=""
/>
`;
